--- a/Day1/Task2/Task2.css
+++ b/Day1/Task2/Task2.css
@@ -16,6 +16,7 @@
     color: rgb(69, 69, 69);
     text-align: center;
     padding: 5px;
+    border-radius: 2px;
 }
 .bottom{
     text-align:end;
