--- a/Day9/style.css
+++ b/Day9/style.css
@@ -1,23 +1,19 @@
-.container{
-  position: absolute;
-  z-index: 9;
-  background-color: #f1f1f1;
-  border: 1px solid #d3d3d3;
-  text-align: center;
-}
-.circle1{
-    border: 2px solid black;
+.circle {
+    position: absolute;
     border-radius: 50%;
-    height: 100px;
+}
+#circle1 {
     width: 100px;
+    height: 100px;
     background-color: red;
-    cursor: move;
-    z-index: 10;
+    cursor: grab;
+    top: 50px;
+    left: 50px;
 }
-.circle2{
-    border: 2px solid black;
-    border-radius: 50%;
-    height: 100px;
+#circle2 {
     width: 100px;
-    background-color: rgb(51, 0, 255);
+    height: 100px;
+    background-color: blue;
+    top: 150px;
+    left: 150px;
 }
