--- a/Day9/style.css
+++ b/Day9/style.css
@@ -2,7 +2,6 @@
     position: absolute;
     border-radius: 50%;
 }
-
 #circle1 {
     width: 100px;
     height: 100px;
@@ -11,11 +10,11 @@
     top: 150px;
     left: 50px;
 }
-
 #circle2 {
     width: 100px;
     height: 100px;
     background-color: blue;
     top: 150px;
     left: 200px;
+    justify-content: center;
 }
